:bulb: comment: 문제 15 주석 추가 및 버전 변경으로 인한 함수 수정